[build-system]
requires = ["hatchling>=1.19.0"]
build-backend = "hatchling.build"

[project]
name = "buildkite-shared"
version = "0.0.1"
requires-python = ">=3.10,<3.15"
description = "Shared tools for buildkite automation"
authors = [{name = "Dagster Labs", email = "hello@dagsterlabs.com"}]
license = "Apache-2.0"
dependencies = [
    "packaging",
    "typing_extensions>=4.10",
]

[project.urls]
Homepage = "https://github.com/dagster-io/dagster/tree/master/.buildkite/buildkite-shared"

[dependency-groups]
test = [
    "pytest",
]

[tool.uv.sources]
