[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dagster-buildkite"
version = "0.0.1"
authors = [{name = "Dagster Labs", email = "hello@dagsterlabs.com"}]
license = {text = "Apache-2.0"}
description = "Tools for buildkite automation"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML",
    "packaging>=20.9",
    "requests",
    "typing_extensions>=4.2",
    "pathspec",
    "urllib3<2",
    "setuptools",
]

[project.urls]
Homepage = "https://github.com/dagster-io/dagster/tree/master/.buildkite/dagster-buildkite"

[project.scripts]
dagster-buildkite = "dagster_buildkite.cli:dagster"
dagster-buildkite-nightly = "dagster_buildkite.cli:dagster_nightly"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["test"]
namespaces = false
