[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dagster-buildkite"
version = "0.0.1"
description = "Tools for buildkite automation"
authors = [{name = "Dagster Labs", email = "hello@dagsterlabs.com"}]
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "buildkite-shared",
    "PyYAML",
    "tomli",
    "packaging>=20.9",
    "requests",
    "typing_extensions>=4.2",
    "pathspec",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/dagster-io/dagster/tree/master/.buildkite/dagster-buildkite"

[project.scripts]
dagster-buildkite = "dagster_buildkite.cli:dagster"
dagster-buildkite-prerelease-package = "dagster_buildkite.cli:prerelease_package"

[tool.setuptools.packages.find]
exclude = [
    "test",
]
