[build-system]
requires = ["hatchling>=1.19.0"]
build-backend = "hatchling.build"

[project]
name = "dagster-buildkite"
version = "0.0.1"
requires-python = ">=3.10,<3.15"
description = "Tools for buildkite automation"
authors = [{name = "Dagster Labs", email = "hello@dagsterlabs.com"}]
license = "Apache-2.0"
dependencies = [
    "buildkite-shared",
    "PyYAML",
    "tomli",
    "packaging>=20.9",
    "requests",
    "typing_extensions>=4.2",
    "pathspec",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/dagster-io/dagster/tree/master/.buildkite/dagster-buildkite"

[project.scripts]
dagster-buildkite = "dagster_buildkite.cli:dagster"
dagster-buildkite-prerelease-package = "dagster_buildkite.cli:prerelease_package"

[dependency-groups]
test = [
    "buildkite-shared",
    "pytest",
    "flaky",
]

[tool.uv.sources]
buildkite-shared = { path = "../buildkite-shared", editable = true }
