[build-system]
requires = ["hatchling>=1.19.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["tutorial_example"]

[project]
name = "airlift-migration-tutorial"
version = "1!0+dev"
requires-python = ">=3.10,<3.12"
dependencies = [
    "dagster",
    "dagster-webserver",
    "dagster-airlift[core,in-airflow]",
    "dbt-duckdb",
    "pandas",
]

[project.optional-dependencies]
[tool.dagster]
module_name = "tutorial_example.definitions"

[dependency-groups]
test = [
    "dagster[test]",
    "dagster-webserver",
    "dagster-test",
    "dagster-pipes",
    "dagster-shared",
    "dagster-graphql",
    "dagster-dbt",
    "dagster-airlift[core,test,in-airflow]",
    "pandas",
    "pytest",
]

[tool.uv.sources]
dagster = { path = "../../python_modules/dagster", editable = true }
dagster-webserver = { path = "../../python_modules/dagster-webserver", editable = true }
dagster-test = { path = "../../python_modules/dagster-test", editable = true }
dagster-pipes = { path = "../../python_modules/dagster-pipes", editable = true }
dagster-shared = { path = "../../python_modules/libraries/dagster-shared", editable = true }
dagster-graphql = { path = "../../python_modules/dagster-graphql", editable = true }
dagster-dbt = { path = "../../python_modules/libraries/dagster-dbt", editable = true }
dagster-airlift = { path = "../../python_modules/libraries/dagster-airlift", editable = true }
