[project]
name = "assets_pandas_pyspark"
version = "0.1.0"
description = "Example Dagster project demonstrating pandas and pyspark."
readme = "README.md"
requires-python = ">=3.8,<3.13"
dependencies = [
    "dagster",
    "pandas",
    "pyspark",
    # "pyarrow",
]

[project.optional-dependencies]
dev = ["dagster-webserver", "pytest"]
test = ["pandas", "pyarrow; python_version < '3.9'", "pyspark"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "assets_pandas_pyspark.definitions"
code_location_name = "assets_pandas_pyspark"

[tool.setuptools.packages.find]
exclude = ["assets_pandas_pyspark_tests"]