[build-system]
requires = ["hatchling>=1.19.0"]
build-backend = "hatchling.build"

[project]
name = "assets_pandas_type_metadata"
version = "1!0+dev"
requires-python = ">=3.10,<3.15"
dependencies = [
    "dagster",
    "dagster-pandera",
    "jupyterlab",
    "matplotlib",
    "seaborn",
    "pandera",
    "pandas",
    "pyarrow",
    "pandera>=0.24.0",
]

[project.optional-dependencies]
dev = ["dagster-webserver", "pytest"]

[tool.dagster]
module_name = "assets_pandas_type_metadata.definitions"
code_location_name = "assets_pandas_type_metadata"

[dependency-groups]
test = [
    "dagster[test]",
    "dagster-pipes",
    "dagster-shared",
    "dagster-webserver",
    "dagster-graphql",
    "dagster-pandera",
]

[tool.uv.sources]
dagster = { path = "../../python_modules/dagster", editable = true }
dagster-pipes = { path = "../../python_modules/dagster-pipes", editable = true }
dagster-shared = { path = "../../python_modules/libraries/dagster-shared", editable = true }
dagster-webserver = { path = "../../python_modules/dagster-webserver", editable = true }
dagster-graphql = { path = "../../python_modules/dagster-graphql", editable = true }
dagster-pandera = { path = "../../python_modules/libraries/dagster-pandera/", editable = true }
