[build-system]
requires = ["hatchling>=1.19.0"]
build-backend = "hatchling.build"

[project]
name = "assets_smoke_test"
version = "1!0+dev"
dependencies = [
    "dagster",
    "dagster-pandas",
    "dagster-dbt",
    "pandas",
    "dbt-snowflake",
    "dagster-snowflake",
    "dagster-snowflake-pandas",
]

[project.optional-dependencies]
dev = ["dagster-webserver", "pytest"]

[tool.dagster]
module_name = "assets_smoke_test.definitions"
code_location_name = "assets_smoke_test"
